--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: project1
+name: appjadwal
 description: A new Flutter project.
 
 version: 1.0.0+1
@@ -17,8 +17,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/font/Montserrat-Italic-VariableFont_wght.ttf
+  assets:
+    - assets/images/Logo.png
   #  - images/a_dot_ham.jpeg
   # fonts:
   #   - family: Schyler
